# PrNet_cpp

./: .gitignore  CMakeLists.txt  README.md
ncnn/include/: platform.h
ncnn/lib/Release/: ncnn.lib
src/: RR_Lib.cpp  config.h  detect.cpp
